clusters/homelab/apps/whoami/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - whoami.ik8s.tylerrosnett.com
  rules:
    - backendRefs:
        - name: whoami
          port: 80
